tests/expectations/compiler/mappings/unknown_external_mapping_fail.out
Error [ETYC0372005]: Unknown variable `foo`
    --> compiler-test:12:31
     |
  12 |     let a:bool = Mapping::get(registry.aleo/foo, addr);
     |                               ^^^^^^^^^^^^^^^^^
